--- a/backup/Dockerfile.dev-failed-travis
+++ b/backup/Dockerfile.dev-failed-travis
@@ -6,5 +6,7 @@ COPY package.json .
 RUN npm install
 
 COPY . .
+RUN npm build
 
-CMD ["npm", "run", "start"]
+FROM nginx
+COPY --from=builder /app/build/ /usr/share/nginx
