--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,16 @@ before_install:
 
 script:
   - docker run -e CI=true itunix365/docker-react npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "Docker-React"
+  env: "Docker-React-env"
+  bucket_name: "elasticbeanstalk-us-east-1-888019920423"	#Services->S3-> elasticbeanstalk-us-east-1-888019920423
+  bucket_path: "Docker-React"   #By default, bucket_path is the app name
+  on:
+    branch: master
+  access_key_id: $AWS_Access_key
+  secret_access_key:
+    secure: "$Secret_Access_key"
