--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -7,4 +7,17 @@ RUN npm install
 
 COPY . .
 
-CMD ["npm", "run", "start"]
+CMD ["npm", "run", "start"][root@ec2-linux-1 backup]# cat Dockerfile.dev-failed-travis
+FROM node:alpine
+
+WORKDIR '/app'
+
+COPY package.json .
+RUN npm install
+
+COPY . .
+RUN npm build
+
+FROM nginx
+COPY --from=builder /app/build/ /usr/share/nginx
+
