--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -8,7 +8,7 @@ RUN npm install
 COPY . .
 
 CMD ["npm", "run", "start"][root@ec2-linux-1 backup]# cat Dockerfile.dev-failed-travis
-FROM node:alpine
+FROM node:alpine as builder
 
 WORKDIR '/app'
 
@@ -16,7 +16,7 @@ COPY package.json .
 RUN npm install
 
 COPY . .
-RUN npm build
+RUN npm run build
 
 FROM nginx
 COPY --from=builder /app/build/ /usr/share/nginx
