--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ before_install:
   - docker build -t itunix365/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true itunix365/docker-react npm run test -- --coverage
+  ###- docker run -e CI=true itunix365/docker-react npm run test -- --coverage
+  - docker run itunix365/docker-react npm run test -- --coverage
 
 deploy:
   provider: elasticbeanstalk
